--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,19 +1,44 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
+<head>
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Заказы</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <style>
-      * {
-        margin: 0px;
-        padding: 0px;
-        box-sizing: border-box;
+      .container {
+        max-width: 1180px;
+      }
+
+      html {
+        scroll-behavior: smooth;
+        font-family: Arial, sans-serif;
       }
     </style>
-  </head>
-  <body style="background-color: aliceblue;">
-    <div id="app"></div>
-  </body>
+    <title>
+      API PREVIEW
+    </title>
+</head>
+<body>
+    <div id="app" class="container"></div>
+
+    <script type="text/javascript" src="https://snipp.ru/cdn/jquery/2.1.1/jquery.min.js"></script>
+    <!-- <script type="text/javascript" src="{% static 'main/js/main.js' %}"></script> -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script type="text/javascript">
+        $.get("https://ipinfo.io", function (response) { 
+            let visited = localStorage.getItem('visited', 0);
+            if (visited === null) {
+                let d = new Date();
+                localStorage.setItem('visited', d);
+                $.ajax({
+	                url: '/api/v1/enter',
+	                method: 'post',
+	                dataType: 'json',
+	                data: response,
+                });
+            }
+        }, "jsonp");
+    </script>
+</body>
 </html>
